--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         <li>Work out the best possible dates & location for the get-together</li>
                         <li>Gather their current location, preferred location for the get-together event, constraints if any, help needed, etc.</li>
                         <li>Periodically update the member status using the Google Forms integrated with this page. </li>
-                        <li>You have to motivate your group members to attend this one last get-together of our batch in our lifetime</li>
+                        <li>You have to motivate your group members to attend this 25th get-together of our batch in our lifetime</li>
                     </ul>
                 </div>
             </div>
