--- a/index.html
+++ b/index.html
@@ -282,6 +282,8 @@
                     <div>• Kiran</div>
                     <div>• Rinu</div>
                     <div>• Nihilson</div>
+                    <div>• Rukku</div>
+
                 </div>
             </div>
             
