update group lead

--- a/index.html
+++ b/index.html
@@ -352,10 +352,10 @@
                     </div>
                     
                     <div class="group-card">
-                        <div class="group-header" onclick="openModal('Group 3', ['Rukku (Group Lead)', 'Swapna', 'Sarramma', 'Bindu', 'Tincy', 'Jincy', 'Viba'])">Group 3</div>
+                        <div class="group-header" onclick="openModal('Group 3', ['Swapna (Group Lead)', 'Rukku', 'Sarramma', 'Bindu', 'Tincy', 'Jincy', 'Viba'])">Group 3</div>
                         <div class="members">
-                            <div class="member-item"><div class="status-indicator status-pending">?</div> <span class="group-leader">Rukku (Group Lead)</span></div>
-                            <div class="member-item"><div class="status-indicator status-pending">?</div> Swapna</div>
+                            <div class="member-item"><div class="status-indicator status-pending">?</div> <span class="group-leader">Swapna (Group Lead)</span></div>
+                            <div class="member-item"><div class="status-indicator status-pending">?</div> Rukku</div>
                             <div class="member-item"><div class="status-indicator status-pending">?</div> Sarramma</div>
                             <div class="member-item"><div class="status-indicator status-pending">?</div> Bindu</div>
                             <div class="member-item"><div class="status-indicator status-pending">?</div> Tincy</div>
